# markserv

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: ci.yml  pr-guard.yml  release.yml
scripts/: vendor-mermaid.mjs
src/markserv/: __init__.py  app.py  cli.py  demo.py  icons.py  markdown.py  rendering.py  runtime.py  search.py  settings.py  site.py  web.py
src/markserv/content/: __init__.py  models.py  navigation.py  paths.py  sources.py
src/markserv/public/css/: app.css  pygments-dark.css  pygments-light.css
src/markserv/public/js/: clipboard.js  dev-reload.js  favicon.js  live-reload.js  mermaid.js  search.js  sidebar.js  theme.js
src/markserv/render/: __init__.py  builders.py  models.py  nav.py  shell.py  support.py
tests/: test_app.py  test_cli.py  test_demo.py  test_icons.py  test_markdown.py  test_package.py  test_page_index.py  test_search.py  test_sidebar.py
typings/cmarkgfm/: __init__.pyi  cmark.pyi
