[project]
name = "markserv"
version = "1.1.1"
description = "Preview local Markdown files and doc trees with live reload, sidebar navigation, anchors, and syntax highlighting"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Nathan Gage", email = "nathan@sweetspot.so" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["docs", "fastapi", "gfm", "markdown", "preview", "reload"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
  "cmarkgfm>=2024.11.20",
  "cyclopts>=4.10.1",
  "fasthx[htmy]>=3.1.0",
  "fastapi>=0.115.12",
  "ignoretree>=0.2.0",
  "pygments>=2.19.2",
  "rich>=14.0.0",
  "uvicorn>=0.34.0",
  "watchfiles>=1.0.5",
  "pyyaml>=6.0.3",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.0", "yamlfix>=1.19.1"]
lint = [
  "mypy>=1.15.0",
  "pyright>=1.1.408",
  "ruff>=0.14.0",
  "taplo>=0.9.3",
  "types-pygments>=2.20.0.20260408",
  "types-pyyaml>=6.0.12.20260408",
]

[project.urls]
Homepage = "https://github.com/nathan-gage/markserv"
Repository = "https://github.com/nathan-gage/markserv"
Issues = "https://github.com/nathan-gage/markserv/issues"
Releases = "https://github.com/nathan-gage/markserv/releases"

[project.scripts]
markserv = "markserv.cli:main"
"markserv.demo" = "markserv.demo:main"

[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.build-backend]
package-data = { "markserv" = [
  "public/**/*.css",
  "public/**/*.js",
  "public/**/*.LICENSE",
] }

[tool.ruff]
line-length = 120
target-version = "py311"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = ["B", "FAST", "I", "Q", "RUF100", "UP"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
include = ["src", "tests"]
stubPath = "typings"
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = ".", extraPaths = [
    "src",
  ] },
  { root = "tests", extraPaths = [
    "src",
  ] },
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/typings"
strict = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
  "error",
  'ignore:.*asyncio\.iscoroutinefunction.*:DeprecationWarning:fasthx\.utils',
]

[tool.yamlfix]
explicit_start = false
preserve_quotes = true
sequence_style = "keep_style"
line_length = 120
section_whitelines = 1
whitelines = 1

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
